# audio-to-notes

./: .gitignore  AGENTS.md  API_README.md  IMPLEMENTATION_SUMMARY.md  README.md  api.py  core.py  main.py  pyproject.toml  run.sh  start_api.sh  test_api.py
backend/: __init__.py
backend/api/: README.md  __init__.py  api.py  database.py  start_api.sh  test_api.py
cli/: __init__.py  main.py
core/: __init__.py  transcription.py
tests/: test_core.py  test_integration.py
tests/outputs/: jfk_speech_outputs.txt
