[project]
name = "audio-to-notes"
version = "0.1.0"
description = "audio-to-notes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "debugpy>=1.8.19",
    "openai>=1.93.0",
    "openai-whisper>=20250625",
    "pyannote-audio>=3.3.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "torch>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.6",
]
